corrected header gap

--- a/index.css
+++ b/index.css
@@ -62,10 +62,11 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     background-color:#18181a ;
     padding: 2rem 3rem;
+    gap: 2rem;
     .logo {
     color: var(--darkblue);
     text-decoration: none;
@@ -106,7 +107,7 @@ header {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        gap: 3rem;
+        gap: 2rem;
         padding-left: 2rem;
         .signin {
             color: var(--orange);
